@@ -107,12 +107,16 @@ public class HttpDigestHelper extends AuthenticatorHelper {
     }
 
     @Override
-    public void formatRequest(ChallengeWriter cw,
-            ChallengeRequest challenge, Response response,
-            Series<Header> httpHeaders) throws IOException {
+    public void formatRequest(ChallengeWriter cw, ChallengeRequest challenge,
+            Response response, Series<Header> httpHeaders) throws IOException {
 
         if (challenge.getRealm() != null) {
             cw.appendQuotedChallengeParameter("realm", challenge.getRealm());
+        } else {
+            getLogger()
+                    .warning(
+                            "The realm directive is required for all authentication schemes that issue a challenge.");
+
         }
 
         if (!challenge.getDomainRefs().isEmpty()) {
@@ -171,9 +175,8 @@ public class HttpDigestHelper extends AuthenticatorHelper {
     }
 
     @Override
-    public void formatResponse(ChallengeWriter cw,
-            ChallengeResponse challenge, Request request,
-            Series<Header> httpHeaders) {
+    public void formatResponse(ChallengeWriter cw, ChallengeResponse challenge,
+            Request request, Series<Header> httpHeaders) {
 
         if (challenge.getIdentifier() != null) {
             cw.appendQuotedChallengeParameter("username",
