@@ -9,9 +9,10 @@ Changes log
          204 status into 1223. Reported by Koen Maes.
        - Fixed issue #739 - copy extension headers from JAX-RS api to restlet response.
          Reported by Mark Kharitonov.
-       - Fixed issue #727 generatio of JSON extension for GWT edition.
+       - Fixed issue #727 generation of JSON extension for GWT edition.
     - Misc
-       - 
+       - Added log warning when an authentication scheme does not define a "realm" parameter.
+         Reported by Loïc Oudot (#759).
 
 - 2.1.2 (02/28/2013)
     - Bug fixed
